# nomenclature_normalization

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 3 самых похожих примера для каждой строчки.ipynb  KSR clean.ipynb  ct_perescheta.ipynb
src/: api.py  ct_perescheta.py  extract_units_and_values.py  similar.py
src/api/: app.py
src/api/.streamlit/: config.toml
src/data/: new_train.csv  submission_example.csv
src/llm_model/: example.py  main_gguf.py  model.py
src/prompt_master/: app.py  example.py  prompt_list.txt  similar.py
src/web/: README.md  front.py  streamlit_app.py
