[tool.poetry]
name = "requirements"
version = "0.1.0"
description = ""
authors = ["Тимофей Сиворакша <hello.timm@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
flask = "^3.0.3"
sentence-transformers = "^2.7.0"
fuzzywuzzy = "^0.18.0"
levenshtein = "^0.25.1"
llama-cpp-python = "^0.2.75"
fire = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
